--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,8 @@ body {
   font-family: "Roboto";
   font-weight: 100;
   background-color: var(--dark-grey);
+  -webkit-text-stroke-width: 0.1px;
+  -webkit-text-stroke-color: black;
   color: var(--white);
   margin: 0 auto;
   --orange-color: var(--orange);
@@ -34,11 +36,38 @@ body {
 }
 
 header {
-  padding: 1em 2em 1em 2em;
+  padding: 1em 2em 20em 2em;
   color: var(--white);
   font-weight: bold;
   margin: 0 auto;
   background-color: var(--orange);
+  background-image: url(https://media.discordapp.net/attachments/864282087573553156/1087988260703322122/IMG_0739.png?width=4000&height=4000);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  word-wrap: break-word;
+  overflow: auto;
+  background-attachment: fixed;
+  background-color: #f7dfd9;
+  margin: 0px;
+  color: #ffffff;
+  font: normal 12px/170% 'Source Sans Pro', sans-serif;
+  letter-spacing: 0px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 10px;
+  z-index: 1;
+  max-width: 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
 }
 
 header nav {
